<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">


    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="182dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/settings"
        android:textColor="#07168a"
        android:textSize="34sp"

        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        android:text="@string/inputgoal"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/evarInte"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#1170d9"
        android:text="@string/send"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evarInte"
        tools:ignore="MissingConstraints,OnClick" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:text="@string/allsettings"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/newest"
        android:layout_width="224dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="#1170d9"
        android:onClick="allSettings"
        android:text="@string/go"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints,OnClick" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="323dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/version"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="320dp"
        android:layout_height="73dp"
        android:layout_marginTop="76dp"
        android:text="@string/about"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.307"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newest"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>